Fixed project 1 and made HW 3

--- a/Project_1.X/nbproject/Makefile-genesis.properties
+++ b/Project_1.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,12 @@
 #
-#Fri Nov 01 21:40:42 EDT 2024
+#Wed Nov 06 18:43:21 EST 2024
 default.languagetoolchain.version=4.45
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.20\\packs\\Microchip\\PIC32MX_DFP\\1.5.259
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v4.45\\bin
 default.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=1eaf555a844840d91945cb14109201c3
 host.id=0
-configurations-xml=b20de45474b05b9fc84dcb845ff7c171
+configurations-xml=5fd8bbb75e8134f044b0f2c0d43ec64c
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
 default.com-microchip-mplab-mdbcore-pk3ob-PK3OBDbgToolManager.md5=79b6a21eb7d855d755f2a429fe098221
 proj.dir=C\:\\Users\\Brett\\College\\Semester 5\\CPEG 222\\CPEG222-MPLAB\\Project_1.X
