--- a/CPEG222_Project3.X/nbproject/Makefile-genesis.properties
+++ b/CPEG222_Project3.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Fri Nov 01 15:59:59 EDT 2024
+#Wed Nov 20 17:47:50 EST 2024
 default.languagetoolchain.version=4.45
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.20\\packs\\Microchip\\PIC32MX_DFP\\1.5.259
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v4.45\\bin
 default.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=1eaf555a844840d91945cb14109201c3
-host.id=0
+host.id=2c77-jn2e-i5
 configurations-xml=613ceef6da9cc50cbe0b38d75cdeeb13
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
 default.com-microchip-mplab-mdbcore-pk3ob-PK3OBDbgToolManager.md5=79b6a21eb7d855d755f2a429fe098221
-proj.dir=C\:\\Users\\Brett\\College\\Semester 5\\CPEG 222\\CPEG222-MPLAB\\CPEG222_Project3.X
+proj.dir=C\:\\Users\\bocks\\MPLABXProjects\\CPEG222_Project3.X
 host.platform=windows
